--- a/impressum.html
+++ b/impressum.html
@@ -1,25 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="de">
-<head><meta charset="UTF-8"><title>Impressum – Echo Vault</title></head>
-<body style="padding:2rem; max-width:700px; font-family:sans-serif;">
-<h1>Impressum</h1>
-<p>Angaben gemäß § 5 TMG</p>
-
-<p>
-Echo Vault (Projektname)<br>
-Verantwortlich für den Inhalt:<br>
-Christian Achim Carl<br>
-Sandberg 27<br>
-26123 Oldenburg<br>
-E-Mail: info@echovault.de
-</p>
-
-<p>Verantwortlich für journalistisch-redaktionelle Inhalte i.S.d. § 55 II RStV:<br>
-Christian Achim Carl</p>
-
-<p>Plattform der EU-Kommission zur Online-Streitbeilegung: <a href="https://ec.europa.eu/odr">https://ec.europa.eu/odr</a></p>
-
-<p>Letzte Aktualisierung: Mai 2025</p>
+<head>
+  <meta charset="UTF-8" />
+  <title>Impressum</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      background: #f9f9f9;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      color: #007a5e;
+    }
+    .content {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>Impressum</h1>
+    <p><strong>Christian Achim Carl</strong><br>
+    Sandberg 27<br>
+    26123 Oldenburg<br>
+    Deutschland</p>
+    <p>E-Mail: info@doneo24.com</p>
+    <p>Verantwortlich für den Inhalt: Christian Achim Carl</p>
+  </div>
 </body>
 </html>
