--- a/nutzungshinweis.html
+++ b/nutzungshinweis.html
@@ -1,20 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="de">
-<head><meta charset="UTF-8"><title>Nutzungshinweis – Echo Vault</title></head>
-<body style="padding:2rem; max-width:700px; font-family:sans-serif;">
-<h1>Nutzungshinweis</h1>
-<p>
-Echo Vault ist ein freiwilliges Online-Tool zur Erstellung eines digitalen Nachlassdokuments. 
-Die Inhalte werden mit Unterstützung einer KI erstellt und dienen ausschließlich der privaten Vorsorge.
-</p>
-
-<p>
-Dieses Tool ersetzt keine rechtliche Beratung oder notarielle Beglaubigung. Für eine rechtsverbindliche Nachlassregelung empfehlen wir die Konsultation eines Notars oder Anwalts.
-</p>
-
-<p>Die Nutzung erfolgt auf eigene Verantwortung. Es besteht keine Haftung für Vollständigkeit oder rechtliche Wirksamkeit.</p>
-
-<p>Letzte Aktualisierung: Mai 2025</p>
+<head>
+  <meta charset="UTF-8" />
+  <title>Datenschutzerklärung</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      background: #f9f9f9;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      color: #007a5e;
+    }
+    .content {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>Datenschutzerklärung</h1>
+    <p>Wir erheben keine personenbezogenen Daten. Die Nutzung der Webseite erfolgt anonym. Die Generierung erfolgt lokal im Browser – keine Daten werden gespeichert oder weitergegeben.</p>
+    <p>Alle erstellten Dokumente verbleiben beim Nutzer und werden nicht auf Servern gespeichert.</p>
+  </div>
 </body>
 </html>
